--- a/lib/package.json
+++ b/lib/package.json
@@ -21,9 +21,13 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/chalk": "^2.2.4",
     "@types/node": "^24.10.1"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2"
   }
 }
